--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidebar-about">
       <h1>{{ site.title }}</h1>
       <p class="lead">{{ site.description }}</p>
-      <a href="/"><img class="image-rounded" src="/public/bowen.jpg"></a>
+      <a href="/"><img class="image-rounded" src="/public/bowen.jpg" style="margin-top: 0px; height: 310px;"></a>
     </div>
 
     <ul class="sidebar-nav">
