--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-	  <li class="sidebar-nav-item"><a href="https://github.com/revan">GitHub</a></li>
+	  <li class="sidebar-nav-item"><a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a></li>
 	  <li class="sidebar-nav-item"><a href="{{ site.resume }}">Resume</a></li>
 
     </ul>
