--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,10 +7,10 @@
     </div>
 
     <ul class="sidebar-nav">
-      <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
+      <!-- <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
         <a href="/blog">Blog</a>
 		{% if page.title == "Blog" %} <i class="fa fa-arrow-left"></i> {% endif %}
-      </li>
+      </li> -->
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
