--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
         {% endif %}
       {% endfor %}
       
-	  <li class="sidebar-nav-item"><a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a></li>
+	  <li class="sidebar-nav-item"><a href="https://github.com/BowenXiao1999">GitHub</a></li>
 	  <li class="sidebar-nav-item"><a href="{{ site.resume }}">Resume</a></li>
 
     </ul>
